# GASSPY

./: .gitignore  Hion_excessE_bands.py  LICENSE  README.md  README.txt  combine-ems.pl  compress.py  contributors.txt  cooling_postprocess-c17.ini  default_postprocess-c17.ini  default_postprocess.ini  default_silcc_high_z_postprocess-c17.ini  defaults.py  fervent_bands.py  fervent_get_den_temp_flux.py  flge_shape.py  fli2_shape.py  flih_shape.py  fluv_shape.py  get_continuum.py  get_den_temp_flux.py  get_em.py  get_flux.py  get_line_profiles.py  local_conditions.py  make-cloudy-input.py  make_cloudy_input.py  make_cloudy_input_cooling.py  myconfig-example.py  myconfig.py  myconfig_example.py  opiate.py  opiate_cloudy_compress.py  opiate_cloudy_compression_lib.py  opiate_defaults.py  opiate_fluxdef.yaml  opiate_lib.py  opiate_unique.pkl  pyproject.toml  radtran_torch  (+5 more)
cloudy-output/: opiate-0000003819.cool  opiate-0000003819.ems  opiate-0000003819.heat  opiate-0000003819.in  opiate-0000003819.mol  opiate-0000003819.opt  opiate-0000005356.in  opiate-0000006884.in  opiate-0000006925.in  opiate-0000007995.in  opiate-0000008914.in  opiate-0000011147.in  opiate-0000011423.in  opiate-0000015669.in  opiate-0000023591.in  opiate-0000030809.in  opiate_user_flux_0.sed  opiate_user_flux_1.sed  opiate_user_flux_2.sed
deprecated/: combine_den_temp_flux.py  cont_shape.py  get_den_temp_flux.py  get_em.py  get_flux.py  make_cloudy_input.py  make_cloudy_input_cooling.py  make_cloudy_lib.py  myconfig_example.py
docs/: database_building.md  preliminaries  radiative_transfer.md  (+1 more)
(+200 files in other folders)
